css/style.css
/*variables*/
:root {
  --white: #fff;
  --charcoal: #5e5e5e;
  --soft-paper: #fff4ee;
  --smokey-blue: #97b0bb;
  --smokey-blue-60: rgba(156, 175, 183, 0.6);
  --darker-blue: #558ead;
  /* --peach: rgba(254, 147, 140, 0.8); */
  --peach: #fe938c;
  --sand: #e6b89c;
  /* --teal-green: rgba(68, 172, 161, 0.6); */
  --teal-green: #b4ded9;

  --mobile-large: 576px;
  --tablet: 768px;
  --desktop-small: 992px;
  --desktop-medium: 1200px;
}

/* Fonts */

/*General styles*/
html {
  scroll-behavior: smooth;
  box-sizing: border-box;
}

body {
  font-family: "Montserrat", sans-serif;
  font-weight: 300;
  line-height: 1.4;
  color: var(--charcoal);
  margin: 0;
  box-sizing: border-box;
}

* {
  box-sizing: border-box;
}

.weight-light {
  font-weight: 300;
}

.weight-semi-bold,
strong {
  font-weight: 600;
}

.weight-bold {
  font-weight: 700;
}

h1,
h3,
h4,
h5,
h6 {
  font-weight: 600;
}

h2 {
  font-weight: 700;
}

p {
  font-size: 17px;
  margin: 0;
}

p.large {
  font-size: 22px;
}

p.small {
  font-size: 12px;
}

.container {
  width: 100%;
  max-width: 536px;
  margin: 0 auto;
  padding-left: 20px;
  padding-right: 20px;
  box-sizing: border-box;
}

@media screen and (min-width: 576px) {
  p {
    font-size: 18px;
  }
  p.small {
    font-size: 14px;
  }
  .container {
    max-width: 708px;
    padding-left: 30px;
    padding-right: 30px;
  }
}

@media screen and (min-width: 768px) {
  p {
    font-size: 20px;
  }
  .container {
    max-width: 1200px;
    padding-left: 40px;
    padding-right: 40px;
  }
}

a:hover,
a:focus,
a:active {
  text-decoration: none;
  color: var(--white);
}

ul {
  list-style: none;
  padding-left: 0;
}

/* ======================== */
/* COMMON STYLES */
/* ======================== */

.section {
  position: relative;
  padding: 60px 0 60px;
}

.section-heading {
  font-size: 40px;
  margin-bottom: 40px;
  position: absolute;
  z-index: 1;
  margin-top: 0;
  top: 0;
  transform: translateY(-65%);
}
.section-heading .final-word {
  position: relative;
}
.section-heading .final-word::after {
  position: absolute;
  left: 0;
  width: calc(100% + 40px);
  height: 30px;
  content: "";
  background-color: var(--darker-blue);
  bottom: -9px;
  z-index: -1;
}

@media screen and (min-width: 576px) {
  .section {
    padding: 80px 0 80px;
  }

  .section-heading {
    font-size: 60px;
    margin-bottom: 60px;
  }
  .section-heading .final-word::after {
    width: calc(100% + 60px);
    height: 40px;
    bottom: -5px;
  }
}

@media screen and (min-width: 768px) {
  .section {
    padding: 150px 0 150px;
  }

  .section-heading {
    font-size: 75px;
    margin-bottom: 60px;
  }
  .section-heading .final-word::after {
    width: calc(100% + 70px);
    height: 50px;
  }
}

@media screen and (min-width: 1200px) {
  .section {
    padding: 200px 0 200px;
  }

  .section-heading {
    font-size: 86px;
    margin-bottom: 60px;
  }
}

/* ======================== */
/* HEADER */
/* ======================== */

.header {
  background-color: var(--soft-paper);
  height: auto;
  z-index: 1;
  padding-top: 50px;
  padding-bottom: 50px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.header__content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

.header__title {
  font-size: 60px;
  color: var(--sand);
  padding-bottom: 50px;
  margin: 0;
}

.header__subtitle {
  font-size: 30px;
  color: var(--smokey-blue);
  margin: 0;
  text-align: right;
}

@media screen and (min-width: 576px) {
  .header {
    min-height: 300px;
    padding-top: 70px;
    padding-bottom: 90px;
  }
  .header__title {
    font-size: 70px;
    padding-bottom: 100px;
  }
  .header__subtitle {
    font-size: 26px;
  }
}

@media screen and (min-width: 768px) {
  .header {
    height: 450px;
    padding-top: 70px;
    padding-bottom: 90px;
  }
  .header__title {
    font-size: 80px;
    padding-bottom: 100px;
  }
  .header__subtitle {
    font-size: 30px;
  }
}

@media screen and (min-width: 1200px) {
  .header {
    height: 500px;
    padding-top: 70px;
    padding-bottom: 90px;
  }

  .header__title {
    font-size: 100px;
    padding-bottom: 150px;
  }
  .header__subtitle {
    font-size: 40px;
  }
}

/* ======================== */
/* INTRO */
/* ======================== */

.intro {
}

.image-block {
  background-image: url(../images/steve-johnson_coloured-chalk_unsplash.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  position: relative;
  height: 500px;
}

.triangle {
  position: absolute;
  top: -30px;
  width: 80%;
  max-width: 620px;
}

.triangle img {
  width: 100%;
  min-width: 300px;
}

.triangle p {
  color: var(--white);
  position: absolute;
  top: 15%;
  left: 49%;
  width: 50%;
  font-size: 14px;
}

.white-block {
  background-color: var(--white);
  padding: 80px 0;
  position: relative;
}

.white-block::before {
  content: "";
  background-color: var(--darker-blue);
  height: 40px;
  width: 60%;
  position: absolute;
  top: 0;
  left: 50%;
  transform: translate(-50%, -50%);
}

.intro__content {
  display: flex;
  flex-direction: column;
  color: var(--charcoal);
  gap: 10px;
}

@media screen and (min-width: 400px) {
  .triangle p {
    left: 40%;
    width: 45%;
  }
}
@media screen and (min-width: 576px) {
  .triangle {
    top: -70px;
    width: 70%;
    min-width: 470px;
  }
  .triangle p {
    top: 20%;
    left: 40%;
    width: 42%;
    font-size: 15px;
  }
  .white-block {
    padding: 120px 0;
  }
  .white-block::before {
    height: 50px;
  }
  .intro__content {
    flex-direction: row;
    align-items: center;
    gap: 50px;
  }
}

@media screen and (min-width: 768px) {
  .triangle {
    top: -90px;
  }
  .triangle p {
    top: 20%;
    left: 35%;
    width: 45%;
    font-size: 17px;
  }
  .white-block {
    padding: 150px 0;
  }
  .intro__content {
    gap: 100px;
  }
  .image-block {
    height: 600px;
  }
}

@media screen and (min-width: 1200px) {
  .triangle {
    top: -30%;
    width: 50%;
    max-width: 650px;
  }
  .white-block {
    padding: 180px 0;
  }
  .image-block {
    height: 700px;
  }
}

/* profile photo */

.circular-img-wrapper {
  display: flex;
  justify-content: end;
}

.circular-img {
  background-image: url("../images/Lucy_headshot.jpg");
  height: 120px;
  width: 120px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 70% 100%;
  border-radius: 100%;
  margin-top: 20px;
}

@media screen and (min-width: 576px) {
  .circular-img-wrapper {
    justify-content: center;
  }

  .circular-img {
    height: 140px;
    width: 140px;
  }
}

@media screen and (min-width: 768px) {
  .circular-img {
    height: 180px;
    width: 180px;
  }
}

@media screen and (min-width: 1200px) {
  .circular-img {
    height: 200px;
    width: 200px;
  }
}

/* ======================== */
/* CAREER */
/* ======================== */

.career {
  background-color: var(--teal-green);
}

.career .section-heading {
  color: var(--peach);
}

.career .section-heading .final-word::after {
  background-color: var(--soft-paper);
}

.career__content {
  display: flex;
  flex-direction: column;
}

/* competencies */
.competencies {
}

.competencies__list {
  padding-left: 0;
  margin-bottom: 0;
}

.competencies__item {
  padding-bottom: 30px;
}

.competencies__item-heading {
  font-size: 20px;
  margin-bottom: 10px;
  margin-top: 0;
}

@media screen and (min-width: 576px) {
  .career__content {
    flex-direction: row;
    gap: 60px;
  }
}

@media screen and (min-width: 768px) {
}

@media screen and (min-width: 1200px) {
}
/* ======================== */
/* PREVIOUS WORK */
/* ======================== */

.work {
  background-color: var(--soft-paper);
}

.work .section-heading {
  color: var(--sand);
}

.work__list {
  padding-left: 0;
}

.work__item {
  margin-bottom: 20px;
}

.work__item img {
  filter: gray; /* IE6-9 */
  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
  object-fit: contain;
  width: 100%;
  height: 100%;
  transition: all 250ms ease-in-out;
}

.work__item img:hover {
  filter: none;
  -webkit-filter: grayscale(0);
}

.work__item p {
  text-align: center;
}

@media screen and (min-width: 768px) {
  .work__item {
    margin-top: 15px;
    margin-bottom: 40px;
  }
}

/* ======================== */
/* ABOUT */
/* ======================== */

.about {
  background-color: var(--darker-blue);
  color: var(--white);
  position: relative;
  padding: 90px 0;
}

.about img {
  position: absolute;
  width: 30%;
  top: -60px;
  right: 40px;
}

.about p {
  margin-bottom: 20px;
}

.about a {
  color: var(--white);
  text-decoration: underline;
}

@media screen and (min-width: 576px) {
  .about {
    padding: 100px 0;
  }
  .about__content {
    width: 60%;
    margin: 0;
  }

  .about img {
    width: 50%;
    top: -120px;
  }
}
@media screen and (min-width: 768px) {
  .about {
    padding: 150px 0;
  }
  .about img {
    width: auto;
    top: -150px;
  }
  .circular-img {
    height: 140px;
    width: 140px;
  }
}
@media screen and (min-width: 1200px) {
  .about {
    padding: 200px 0;
  }
  .circular-img-wrapper {
    display: flex;
    justify-content: center;
  }

  .circular-img {
    background-image: url("../images/Lucy_headshot.jpg");
    height: 100px;
    width: 100px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 70% 100%;
    border-radius: 100%;
    margin-top: 20px;
  }
}
@media screen and (min-width: 768px) {
}
/* ======================== */
/* CONTACT */
/* ======================== */

.contact {
  background-color: var(--smokey-blue);
  color: var(--white);
}

.contact.section {
  padding: 80px 0;
}

.contact .section-heading .final-word::after {
  background-color: var(--peach);
}

.contact-item {
  display: flex;
  flex-direction: column;
  margin-bottom: 40px;
}

.contact img {
  width: 20px;
  margin-bottom: 10px;
  margin-right: 20px;
  color: var(--soft-paper);
}

.contact a {
  font-size: 18px;
  font-weight: 600;
  color: var(--charcoal);
  word-break: break-word;
  text-decoration: none;
}

.contact a .at-sign {
  color: var(--teal-green);
  padding: 0 5px;
}

@media screen and (min-width: 576px) {
  .contact a {
    font-size: 24px;
  }
  .contact-item {
    flex-direction: row;
    align-items: center;
  }
  .contact img {
    margin-bottom: 0;
  }
  .contact a .at-sign {
    padding: 0 10px;
  }
}
@media screen and (min-width: 768px) {
  .contact.section {
    padding: 120px 0;
  }
  .contact a {
    font-size: 30px;
  }
  .contact img {
    width: 30px;
    margin-right: 40px;
  }
}

/* ======================== */
/* FOOTER */
/* ======================== */

footer {
  background-color: var(--smokey-blue);
  color: var(--white);
  padding-bottom: 40px;
}

.footer-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 12px;
}

footer span {
  color: var(--darker-blue);
  font-weight: 600;
  font-size: 16px;
  padding: 0 15px;
}

footer a {
  color: var(--white);
}

.copyright {
  white-space: nowrap;
}

@media screen and (min-width: 768px) {
  .footer-content {
    flex-direction: row;
  }
}

